# Fx-Rate-Service

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.railway  Makefile  Procfile  RAILWAY-QUICKSTART.md  RAILWAY.md  README.md  SETUP.md  deploy-railway.sh  docker-compose.yml  fx-rate-service.cabal  nixpacks.toml  railway.toml  railway.worker.toml  run-local.sh  setup-local.sh  start-railway.sh
app/: Fetcher.hs  Main.hs
src/FXRate/: Config.hs  Types.hs
src/FXRate/API/: Server.hs
src/FXRate/Core/: Aggregation.hs  Conversion.hs
src/FXRate/Database/: Operations.hs  Schema.hs
test/: AggregationSpec.hs  ConversionSpec.hs  Spec.hs
